[gd_scene load_steps=3 format=3 uid="uid://cewg41etai1yf"]

[ext_resource type="Script" uid="uid://cm80i7uo0ggkh" path="res://scenes/game_scenes/pair_entry.gd" id="1_432ah"]
[ext_resource type="Texture2D" uid="uid://oj80tfrkbxl2" path="res://sprites/generic_profilew185_red.png" id="2_krvpo"]

[node name="PairEntry" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_432ah")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="PairImageMargin" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PairImage" type="TextureRect" parent="MarginContainer/VBoxContainer/PairImageMargin"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2_krvpo")
stretch_mode = 4

[node name="PairLabelMargin" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PairLabel" type="Label" parent="MarginContainer/VBoxContainer/PairLabelMargin"]
unique_name_in_owner = true
layout_mode = 2
text = "Pair Placeholder Text"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HTTPRequest" type="HTTPRequest" parent="."]
